--- a/src/app/workouts/add-workout/AddWorkout.module.scss
+++ b/src/app/workouts/add-workout/AddWorkout.module.scss
@@ -13,6 +13,7 @@
   }
   h2{
     font-size: 3rem;
+    text-align: center;
   }
   
 
